# locator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  magnifier-orbit.js  release-notes.md  social.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: lctr.rb
bucket/: lctr.json
docs/: windows.md
scripts/: test-update-release-manifests.sh  update-deps.sh  update-release-manifests.sh
src/: config.rs  config_ui.rs  db.rs  lib.rs  live_index.rs  live_search.rs  main.rs  open.rs  preview.rs  query.rs  scan_ui.rs  scanner.rs  tui.rs  update_check.rs  watch.rs
src/tui/: theme.rs
tests/: cli_tests.rs  config_tests.rs  db_tests.rs  frecency_tests.rs  live_index_tests.rs  live_search_tests.rs  parity_tests.rs  preview_tests.rs  query_tests.rs  scan_progress_tests.rs  scanner_tests.rs
