[package]
name = "locator"
version = "0.1.39"
edition = "2021"
description = "Fast local file metadata search"
repository = "https://github.com/NotTanJune/locator"
homepage = "https://github.com/NotTanJune/locator"
license = "GPL-3.0-only"

[lib]
name = "locator"
path = "src/lib.rs"

[[bin]]
name = "lctr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
humansize = "2.1"
indicatif = "0.17"
jwalk = "0.8"
libc = "0.2"
ratatui = "0.29"
regex = "1.12"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
tempfile = "3.13"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
