[package]
name = "locator"
version = "0.2.3"
edition = "2021"
description = "Fast local file metadata search"
repository = "https://github.com/NotTanJune/locator"
homepage = "https://github.com/NotTanJune/locator"
license = "GPL-3.0-only"

[lib]
name = "locator"
path = "src/lib.rs"

[[bin]]
name = "lctr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29"
dirs = "6.0"
humansize = "2.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
indicatif = "0.18"
jwalk = "0.8"
libc = "0.2"
notify = "6"
nucleo-matcher = "0.3"
pdf-extract = "0.10.0"
ratatui = "0.30"
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
regex = "1.12"
rusqlite = { version = "0.39", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
tempfile = "3.13"
toml = "1.1.2"
ureq = "2.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json = "1.0"
